5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1764_2390.log
== SUBMITION (2019-05-25 00:59:59) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.177552
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 5
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:31) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.187489
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:38) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.129508
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:38) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.18477
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:39) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.148637
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:39) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.134438
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:40) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.174139
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:40) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.186782
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:42) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.190301
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:42) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.089597
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:43) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.177452
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:44) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.097266
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:59) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.11712
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:59) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.197466
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:00:59) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.141116
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:01:00) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.181005
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:01:00) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.152214
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:01:00) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.120308
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:01:00) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.14549
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 01:01:01) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.088104
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:00:28) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.140236
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:00:29) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.180798
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:00:30) 
-- CODE:
from numpy import*
fre = array(eval(input("digite"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.182746
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:04:05) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.190415
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 5
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:04:07) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.170814
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 5
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:04:07) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.184684
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 5
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:04:08) 
-- CODE:
from numpy import*
fre = array(
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.132266
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 5
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:12) 
-- CODE:
from numpy import*
fre = array(eval(input("A:"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.254982
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:13) 
-- CODE:
from numpy import*
fre = array(eval(input("A:"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.194122
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:14) 
-- CODE:
from numpy import*
fre = array(eval(input("A:"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.182541
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:14) 
-- CODE:
from numpy import*
fre = array(eval(input("A:"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.112711
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1764/2390/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:15) 
-- CODE:
from numpy import*
fre = array(eval(input("A:"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.184621
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:15) 
-- CODE:
from numpy import*
fre = array(eval(input("A:"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.139405
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:16) 
-- CODE:
from numpy import*
fre = array(eval(input("A:"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.182437
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:16) 
-- CODE:
from numpy import*
fre = array(eval(input("A:"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.118846
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1764/2390/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:16) 
-- CODE:
from numpy import*
fre = array(eval(input("A:"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.144329
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:16) 
-- CODE:
from numpy import*
fre = array(eval(input("A:"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.191278
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:08:57) 
-- CODE:
from numpy import*
fre = array(eval(input("A:"))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.363139
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 3
    maior_fre = max(fre)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:09:03) 
-- CODE:
from numpy import*
fre = array(eval(input("A:")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:09:03) 
-- CODE:
from numpy import*
fre = array(eval(input("A:")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
1.19926
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
A:11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:09:04) 
-- CODE:
from numpy import*
fre = array(eval(input("A:")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:09:05) 
-- CODE:
from numpy import*
fre = array(eval(input("A:")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
1.55491
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
A:10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:09:06) 
-- CODE:
from numpy import*
fre = array(eval(input("A:")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
1.26071
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
A:11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
A:10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:09:12) 
-- CODE:
from numpy import*
fre = array(eval(input("A:")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
	print(mes)
-- EXECUTION TIME:
0.695015
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 10, in <module>
    print(mes)
NameError: name 'mes' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:09:14) 
-- CODE:
from numpy import*
fre = array(eval(input("A:")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
	print(mes)
-- EXECUTION TIME:
1.82015
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 10, in <module>
    print(mes)
NameError: name 'mes' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:09:15) 
-- CODE:
from numpy import*
fre = array(eval(input("A:")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
	print(mes)
-- EXECUTION TIME:
1.57207
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 10, in <module>
    print(mes)
NameError: name 'mes' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:09:19) 
-- CODE:
from numpy import*
fre = array(eval(input("A:")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:29:03) 
-- CODE:
from numpy import*
fre = array(eval(input("A:")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
i = i + 1
print(mes)
-- EXECUTION TIME:
1183.68
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:30:02) 
-- CODE:
from numpy import*
fre = array(eval(input("A:")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
i = i + 1
print(mes)
-- EXECUTION TIME:
1242.43
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 08:51:03) 
-- CODE:
from numpy import*
fre = array(eval(input("Entrada: ")))
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.516239
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
